[package]
name = "catch"
version = "0.0.1"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
description = "Error recovery utilities."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tamschi/catch"
homepage = "https://github.com/Tamschi/catch/tree/v0.0.1"
documentation = "https://docs.rs/catch/0.0.1"
keywords = [] #TODO
categories = [] #TODO
readme = "README.md"
include = [
	"**/*.rs",
	"!tests/unincluded_*.rs", # Tests of meta data files not included in the package.
	"Cargo.toml",
	"CHANGELOG.md",
	"CODE_OF_CONDUCT.md",
	"COPYRIGHT.md",
	"LICENSE-*",
	"README.md",
	"SECURITY.md",
]
resolver = "2"
publish = false

[badges]
is-it-maintained-issue-resolution = { repository = "Tamschi/catch" }
is-it-maintained-open-issues = { repository = "Tamschi/catch" }
maintenance = { status = "experimental" } # This may differ between branches.

[dev-dependencies]
cargo-husky = "1.5.0"
git_info = "0.1.2"
version-sync = "0.9.3"
wasm-bindgen-test = "0.3.28"
